crates/linear_ty/tests/compile_fail/linear_non_exhaustive.rs
use linear_ty::linear;

linear! {
    #[non_exhaustive]
    pub struct NonExhaustiveLinear(String);
}

fn main() {}
