crates/linear_ty/tests/compile_fail/linear_non_exhaustive.stderr
error: macro impl must not target #[non_exhaustive] types
 --> tests/compile_fail/linear_non_exhaustive.rs:3:1
  |
3 | / linear! {
4 | |     #[non_exhaustive]
5 | |     pub struct NonExhaustiveLinear(String);
6 | | }
  | |_^
  |
  = note: this error originates in the macro `$crate::deny_non_exhaustive` which comes from the expansion of the macro `linear` (in Nightly builds, run with -Z macro-backtrace for more info)
